# graphcat

./: .gitignore  .travis.yml  README.md  pyproject.toml  regression.py  setup.py
.github/workflows/: python-package.yml  regression-tests.yml
artwork/: workflow-diagram.ipynb
docs/: anaconda-installation.rst  case-studies.rst  compatibility.rst  conf.py  contributing.rst  dependencies.rst  developers.rst  development.rst  gallery.rst  graphcat.common.rst  graphcat.diagram.rst  graphcat.dynamic.rst  graphcat.graph.rst  graphcat.notebook.rst  graphcat.optional.rst  graphcat.require.rst  graphcat.rst  graphcat.static.rst  graphcat.streaming.rst  image-processing-case-study.ipynb  index.rst  installation.rst  projects.rst  reference.rst  release-notes.rst  requirements.txt  support.rst  tutorial.ipynb  user-guide.rst
docs/css/: graphcat.css
docs/gallery/: avoiding-updates.ipynb  drawing.ipynb  performance-monitor.ipynb  static-vs-dynamic.ipynb  visualization.ipynb
docs/user-guide/: avoiding-updates.ipynb  cycles.ipynb  dynamic-graphs.ipynb  expression-tasks.ipynb  image-processing.ipynb  performance-monitor.ipynb  static-vs-dynamic.ipynb  streaming-graphs.ipynb  visualization.ipynb
features/: documentation.feature  dynamic.feature  graph.feature  static.feature  streaming.feature
features/steps/: administrivia.py  documentation.py  graph.py  test.py
graphcat/: __init__.py  common.py  diagram.py  dynamic.py  graph.py  notebook.py  optional.py  require.py  static.py  streaming.py
notebooks/: compatibility.ipynb  cycles.ipynb  display.ipynb  dynamic-graph.ipynb  error.ipynb  expressions.ipynb  loops.ipynb  performance-monitor.ipynb  topology-changes.ipynb  updated-tasks.ipynb  variable.ipynb
